--- a/part7/blogApp/frontend-redux/src/index.css
+++ b/part7/blogApp/frontend-redux/src/index.css
@@ -1,3 +1,366 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+ul {
+  list-style: none;
+}
+
+html {
+  font-family: 'Poppins', sans-serif;
+}
+
+body {
+  background-color: lightblue;
+  display: flex;
+  justify-content: center;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.login {
+  margin-top: 100px;
+  background-color: white;
+  border-radius: 8px;
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  padding: 30px;
+  color: #333;
+}
+
+.login h2 {
+  font-size: 32px;
+  color: #333;
+  text-align: center;
+}
+
+.login form {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 30px;
+}
+
+.login-group {
+  width: 100%;
+}
+
+.login input {
+  width: 100%;
+  display: block;
+  background-color: white;
+  outline: none;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  color: #333;
+  font-family: inherit;
+  padding: 10px;
+}
+
+.login button {
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  background-color: #007bff;
+  color: white;
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+
+.login button:hover {
+  background-color: #0056b3;
+}
+
+.container {
+  width: 1200px;
+  background-color: white;
+  color: #333;
+  margin-block: 100px;
+}
+
+.navbar {
+  display: flex;
+  gap: 20px;
+  padding: 20px 10px;
+  background-color: #007bff;
+  color: white;
+  font-size: 20px;
+}
+
+.navbar .link:hover {
+  color: #0056b3;
+}
+
+.navbar button {
+  background-color: white;
+  color: #007bff;
+  border: none;
+  padding: 5px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-left: 20px;
+}
+
+.navbar button:hover {
+  background-color: #0056b3;
+  color: white;
+}
+
+.blogPage {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.blogPage h1 {
+  font-size: 40px;
+  margin: 20px 0;
+  color: #333;
+}
+
+.blogPage .togglableButton,
+#create-button,
+.cancelButton {
+  margin-top: 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+.blogPage .togglableButton:hover {
+  background-color: #0056b3;
+}
+
+.createForm {
+  margin-block: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.createForm form {
+  width: 500px;
+}
+
+.createForm input {
+  width: 100%;
+  display: block;
+  background-color: white;
+  outline: none;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  color: #333;
+  font-family: inherit;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.blogs {
+  margin-block: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.blogLink {
+  border-top: 1px solid #333;
+  border-bottom: 1px solid #333;
+  padding: 10px 5px;
+  margin-block: 20px;
+  display: block;
+  text-decoration: none;
+  background-color: lightgray;
+}
+
+.blogLink:hover {
+  background-color: #0056b3;
+  color: white;
+}
+
+.comments h3 {
+  font-size: 24px;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+.comments input {
+  display: block;
+  width: 300px;
+  background-color: white;
+  outline: none;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  color: #333;
+  font-family: inherit;
+  padding: 10px;
+}
+
+.comments button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-block: 10px;
+}
+
+.usersPage {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px;
+}
+
+.usersPage h2 {
+  font-size: 30px;
+  color: #333;
+}
+
+.usersPage table {
+  width: 100%;
+  border-collapse: collapse;
+  text-align: left;
+}
+
+.usersPage th,
+.usersPage td {
+  padding: 10px;
+  border: 1px solid #ccc;
+}
+
+.usersPage th {
+  background-color: #007bff;
+  color: white;
+  font-weight: 600;
+}
+
+.usersPage tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+.usersPage tr:hover {
+  background-color: #ddd;
+}
+
+.usersLink:hover {
+  color: #0056b3;
+}
+
+.userPage {
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.userPage ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.userPage ul li {
+  padding: 10px;
+  background-color: #f9f9f9;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.userPage ul li:hover {
+  background-color: #e6e6e6;
+}
+
+nav {
+  display: flex;
+  padding: 10px 5px;
+  gap: 10px;
+  background-color: lightgray;
+}
+
+nav p {
+  padding: 0;
+  margin: 0;
+}
+
+.blog {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px;
+}
+
+.blog h2 {
+  font-size: 30px;
+  color: #333;
+}
+
+.blog .details {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.blog .details a {
+  text-decoration: none;
+  color: #007bff;
+  font-size: 20px;
+}
+
+.blog .details a:hover {
+  color: #0056b3;
+}
+
+.likeButton {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-left: 10px;
+}
+
 /* Styles for successful notifications */
 .success {
   color: #155724;
@@ -18,24 +381,4 @@
   border-radius: 5px;
   font-size: 16px;
   margin: 10px 0;
-}
-
-.blogLink {
-  border: 1px solid black;
-  padding: 10px 5px;
-  margin-block: 20px;
-  display: block;
-  text-decoration: none;
-}
-
-nav {
-  display: flex;
-  padding: 10px 5px;
-  gap: 10px;
-  background-color: lightgray;
-}
-
-nav p {
-  padding: 0;
-  margin: 0;
 }
