Working on exercise 9.26

--- a/part9/patientor/frontend/src/index.css
+++ b/part9/patientor/frontend/src/index.css
@@ -26,7 +26,8 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  justify-content: center;
+  align-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -53,6 +54,11 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+/* Entry */
+.entry {
+  border: 1px solid black;
 }
 
 @media (prefers-color-scheme: light) {
